plugins/plugin-grid/web/css/table.css
/* ... */
.activation-viz-plugin .cell-container[color-by="duration"] .grid-cell-occupied.latency-3 .grid-cell-content {
    background-color: var(--color-latency-3);
}
.activation-viz-plugin .cell-container[color-by="duration"] .grid-cell-occupied.latency-4 .grid-cell-content {
    background-color: var(--color-latency-4);
}
.activation-viz-plugin .cell-container[color-by="duration"] .grid-cell-occupied.latency-5 .grid-cell-content {
    background-color: var(--color-latency-5);
}

.activation-viz-plugin .data-table .oops {
    font-weight: 900;
}

/** grid view */
.activation-viz-plugin .grid-grid:not(.activation-viz-timeline) {
    /* margin: 0.5em 0 0.5em 0.5em; */ /* has to be margin, not padding; see shell issue #874; no right margin for scrollbar flush right */
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    overflow-y: auto;
    overflow-x: hidden; /* we're flex-wrapping */
}
.activation-viz-plugin .grid {
    display: flex;
    flex-direction: column;
    padding: 1em 1.5em 0 0;
    /* want this, but it's not yet supported z-index: attr(data-grid-index number);*/
}

/* as timeline */
.activation-viz-plugin.grid-as-timeline {
    flex-wrap: nowrap;
    overflow: hidden;
    /* justify-content: flex-end;
    align-items: flex-start; */
}
.activation-viz-plugin.grid-as-timeline .grid-grid .grid {
    flex-direction: row;
    align-items: flex-end;
    padding: 0;
}
.activation-viz-plugin.grid-as-timeline .grid-grid .grid .grid-row {
    flex: initial;
    flex-wrap: nowrap;
    flex-direction: column-reverse;
    width: 2.75vw;
}
.activation-viz-plugin.grid-as-timeline .grid-grid .grid .grid-row:hover {
    /* tooltip stacking */
    z-index: 9;
}
.activation-viz-plugin.grid-as-timeline .grid-grid .grid .grid-row:hover .grid-cell:not(:hover) {
    /* tooltip stacking */
    z-index: -1;
}
.activation-viz-plugin.grid-as-timeline .grid-grid.zoom_1 .grid .grid-row {
    width: 3vw;
}
.activation-viz-plugin.grid-as-timeline .grid-grid.zoom_2 .grid .grid-row {
    width: 4vw;
}
.activation-viz-plugin.grid-as-timeline .grid-grid.zoom_-1 .grid .grid-row {
    width: 1vw;
}
.activation-viz-plugin.grid-as-timeline .grid-grid.zoom_-2 .grid .grid-row {
    width: 0.75vw;
}
.activation-viz-plugin.grid-as-timeline .grid-grid:not(.activation-viz-timeline) {
    margin: 0;
    flex: 1;
    flex-wrap: nowrap;
    overflow: hidden;
    justify-content: unset;
}
.activation-viz-plugin.grid-as-timeline .grid-timeline-empty-swath {
    /* empty swaths in the grid-as-timeline */
    flex-direction: row !important;
    justify-content: center;
    align-items: center;
    width: 2.5vw !important;
    height: 100%;
    background-color: var(--color-ui-02);
    /*margin: 0 0.2vw;*/
    background-image: repeating-linear-gradient(-45deg, transparent, transparent 2px, rgba(0,0,0,.01) 2px, rgba(0,0,0,0.01) 8px), repeating-linear-gradient(45deg, transparent, transparent 2px, rgba(0,0,0,0.02) 2px, rgba(0,0,0,0.02) 17px);
}
.activation-viz-plugin.grid-as-timeline .grid-timeline-empty-swath-inner {
    /* empty swaths inner text, e.g. denoting the length of the gap */
    font-size: 0.8vw;
    color: var(--color-ui-05);
    opacity: 1;
    font-weight: 800;
}


.activation-viz-plugin .grid .grid-row {
    flex: 1;
    display: flex;
    flex-wrap: wrap;
    align-content: flex-start;
}
.activation-viz-plugin .grid .grid-label {
    font-weight: 400;
    margin-bottom: 0.125em;
    /* min-width: 8em; */
}
.grid-label > div {
    display: flex;
    align-items: center;
}
.activation-viz-plugin .grid .grid-label .grid-label-part.package-prefix:after {
    content: '/';
}
.activation-viz-plugin .grid .grid-label .grid-label-part {
    /* the action and package name bits of a grid label */
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    max-width: 25em;
}
/* hide failures in duration coloring mode: */
/*.activation-viz-plugin .grid-grid[color-by="duration"] .grid-cell.is-failure-true {
    width: 0;
    height: 0;
    border-width: 0;
}*/
.activation-viz-plugin .grid-cell {
    /* square aspect ratio */
    width: 2.75vw;
    height: 2.75vw;
}
.activation-viz-plugin .zoom_1 .grid-cell {
    /* square aspect ratio */
    width: 3vw;
    height: 3vw;
}
.activation-viz-plugin .zoom_2 .grid-cell {
    /* square aspect ratio */
    width: 4vw;
    height: 4vw;
}
.activation-viz-plugin .zoom_-1 .grid-cell {
    /* square aspect ratio */
    width: 1vw;
    height: 1vw;
}
.activation-viz-plugin .zoom_-2 .grid-cell {
    /* square aspect ratio */
    width: 0.75vw;
    height: 0.75vw;

    /* for higher zoom levels, use a transparent outline to blur the small cells together better */
    border: none;
    outline: 1px solid rgba(255,255,255,0.4);
}
.activation-viz-plugin .grid .grid-cell {
    display: flex;
    padding: 0;
    transition: all 150ms ease-in-out;
}
.activation-viz-plugin .grid .grid-cell.grid-cell-newly-created {
    animation: pulsate 1s ease-out 2;
}
@-webkit-keyframes pulsate {
    0% {-webkit-transform: scale(0.1, 0.1); opacity: 0.0;}
    50% {opacity: 1.0;}
    100% {-webkit-transform: scale(1.25, 1.25); opacity: 0.0;}
}
.activation-viz-plugin .grid .grid-cell:not(.grid-no-hover):hover {
    filter: saturate(4) brightness(0.9) !important;
    cursor: pointer;
}
.activation-viz-plugin .grid .grid-cell-content {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    position: relative;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    transition: background-color 300ms ease-in-out;
}

/* innerLabel for cells; see cell.js: const innerLabel */
.activation-viz-plugin .cell-container.zoom_-1 .grid-cell-content > span,
.activation-viz-plugin .cell-container.zoom_-2 .grid-cell-content > span {
    /* the cells are too small for the inner latency label */
    opacity: 0
}
.activation-viz-plugin .cell-container.zoom_1 .grid-cell-content > span {
    font-size: 0.85vw;
}
/* ... */

